fixing bio spacing

--- a/src/components/Bio/Bio.css
+++ b/src/components/Bio/Bio.css
@@ -32,22 +32,22 @@
     font-weight: 300;
     font-style: normal;
     font-size: 48px;
-    margin-bottom: 5%;
+    margin-bottom: 0%;
 }
 #title{
     font-family: nobel, sans-serif;
     font-style: normal;
     font-weight: 100;
     font-size: 22px;
-    margin-top: 3%;
-    margin-bottom: 3%;
+    margin-top: 0%;
+    margin-bottom: 0%;
 }
 #stack{
     font-family: nobel, sans-serif;
     font-style: normal;
     font-weight: 100;
     font-size: 22px;
-    margin-top: 3%;
+    margin-top: 2%;
 }
 .contactinfo{
     display: grid;
@@ -55,7 +55,7 @@
     grid-template-rows: 25% 25% 20% 20%;
     text-align: left;
     margin-left: 0px;
-    margin-top: 10%;
+    margin-top: 5%;
     margin-bottom: 0%;
 }
 #contactinfoheader{
@@ -132,11 +132,12 @@
         display: grid;
         grid-template-columns: 300px;
         grid-template-rows: 25% 20% 20% 20%;
+        margin-top: 10%;
     }
     #contactinfoheader{
         font-size: 32px;
         margin-top: 0px;
-        margin-bottom: 5%;
+        margin-bottom: 0%;
     }
     #email{
         font-size: 22px;
